tests/fixtures/invalid/pow_bytes_list_bytes.py
# Cannot call pow() with Bytes, List[int], Bytes
x = pow(b"hello", [1, 2, 3], b"hello")
